--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -88,7 +88,7 @@
 
              <div class="baground container-fluid">
                 <div class="col-12">
-                    <h1 class="h1 text-center "> Contact us</h1>
+                    <h1 class="h1 text-center fw-bold text-danger" style="font-size: 3rem;"> Contact us</h1>
                     <h3 class="h5 text-center " > any question or reamarks?  just write us a message !</h3>
                     <h3 class="h5 text-center"> Fill up the form and our team will get back
                         you within 24 hours.</h3>
