--- a/index.html
+++ b/index.html
@@ -111,18 +111,22 @@
             </p>
           </div>
           <div class="mt-5">
-            <button
-              class="btn text-light"
-              style="background-color: #7b4bff; border-color: #812dff"
-            >
-              Learn More
-            </button>
-            <button
-              class="btn text-light"
-              style="background-color: #ff4b66; border-color: #ff4e69"
-            >
-              Live Demo
-            </button>
+              <a href="./Pages/courses.html">
+                  <button
+                  class="btn text-light"
+                  style="background-color: #7b4bff; border-color: #812dff"
+                  >
+                  Learn More
+                </button>
+              </a>
+            <a href="./Pages/video-player.html">
+                <button
+                  class="btn text-light"
+                  style="background-color: #ff4b66; border-color: #ff4e69"
+                >
+                  Live Demo
+                </button>
+            </a>
           </div>
         </div>
         <div class="col-lg-7">
@@ -301,9 +305,11 @@
         style="height: 3px; width: 15rem; background-color: #812dff"
       ></div>
       <div class="row our-course-container mt-5"></div>
+      <a class="d-flex justify-content-center align-item-center mt-5" href="./Pages/courses.html"><button type="button" class="btn btn-primary fw-bold">View All Courses</button></a>
     </div>
 
     <!-- ----------------------------------------------------------------------------- -->
+    <div class="mt-5">.</div>
     <div class="container mt-5 bg-light second-background-gradiant">
       <div class="row">
         <div class="col-lg-7 text-center pt-5 mt-5">
