--- a/index.html
+++ b/index.html
@@ -154,15 +154,24 @@
     >
       <div
         class="row text-center fw-bold p-5 text-light"
-        style="font-size: 2rem"
+        style="font-size: 1.5rem"
       >
-        <div class="col-lg-3 col-md-6 col-sm-6 pt-3 pb-3 value1"></div>
-
-        <div class="col-lg-3 col-md-6 col-sm-6 pt-3 pb-3 value2"></div>
-
-        <div class="col-lg-3 col-md-6 col-sm-6 pt-3 pb-3 value3"></div>
-
-        <div class="col-lg-3 col-md-6 col-sm-6 pt-3 pb-3 value4"></div>
+        <div class="col-lg-3 col-md-6 col-sm-6 pt-3 pb-3">
+          <p class="value1"></p>
+          <p>YouTube</p>
+        </div>
+        <div class="col-lg-3 col-md-6 col-sm-6 pt-3 pb-3">
+          <p class="value2"></p>
+          <p>Linked</p>
+        </div>
+        <div class="col-lg-3 col-md-6 col-sm-6 pt-3 pb-3">
+          <p class="value3"></p>
+          <p>Instagram</p>
+        </div>
+        <div class="col-lg-3 col-md-6 col-sm-6 pt-3 pb-3">
+          <p class="value4"></p>
+          <p>Telegram</p>
+        </div>
       </div>
     </div>
 
