--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <a class="nav-link fw-bold" href="./Pages/contact.html">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link fw-bold" href="#">About Us</a>
+              <a class="nav-link fw-bold" href="./Pages/About.html">About Us</a>
             </li>
             <li class="nav-item">
               <a class="nav-link fw-bold" href="./Pages/dashBoard.html">Dashboard</a>
