--- a/Pages/sign-up.html
+++ b/Pages/sign-up.html
@@ -44,7 +44,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light text-center shadow-lg p-3 mb-5 bg-white">
         <div class="container navbaar-container d-flex align-items-center justify-content-between p-1">
           
-          <a class="navbar-brand" href="../index.html">E-Learning</a>
+          <a class="navbar-brand" href="../index.html"><img src="../assest/new-index-image/logo-main.png" class="img-fluid" alt=""></a>
           <button
             class="navbar-toggler"
             type="button"
