--- a/Pages/About.html
+++ b/Pages/About.html
@@ -45,6 +45,17 @@
         justify-content: center;
         align-items: center;
       }
+      .card{
+        height: 300px; 
+        width: 250px;
+        background-color: rgb(252, 252, 252); 
+        border:2px solid rgb(255, 141, 100); 
+        border-radius: 20px;
+        box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5)
+      }
+      .card:hover{
+        box-shadow: inset 0px 6px 11px 0px rgba(0, 0, 0, 0.8);
+      }
     </style>
 </head>
 
@@ -149,7 +160,7 @@
     <div class="our-team w-100" style="background-image: linear-gradient(to right, #f0d3ce, #efd4d9, #ebd7e2, #e4dae9, #dddeec, #dadeec, #d7dfea, #d4dfe9, #d1dde7, #cedae6, #ccd8e5, #c9d5e3);; padding-bottom: 40px; padding-bottom: 50px;">
         <h1 class=" d-flex justify-content-center p-5 ">Meet Our Team</h1>
         <div class="bg-cards d-flex justify-content-around">
-            <div class="card  d-flex  align-items-center justify-content-center " style="width: 250px; height: 300px; background-color: rgb(252, 252, 252); border:2px solid rgb(255, 141, 100); border-radius: 20px;"><img src="../assest/About-Us/Ajinkya Daf.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;"><br>
+            <div class="card  d-flex  align-items-center justify-content-center "><img src="../assest/About-Us/Ajinkya Daf.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;"><br>
                 <h3>Ajinkya Daf</h3>
                 <h4>Software Developer</h4>
                 <div class="icons-card align-items-center justify-content-center ">
@@ -157,7 +168,7 @@
                     <i class="icon fa-brands fa-github p-3 h3"></i><br>
                     <i class="icon fa-brands fa-instagram p-3 h3"></i>
                   </div></div>
-                  <div class="card  d-flex  align-items-center justify-content-center " style="width: 250px; height: 300px; background-color: rgb(252, 252, 252); border:2px solid rgb(255, 141, 100); border-radius: 20px;"><img src="../assest/About-Us/Shirish Meshra.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;"><br>
+                  <div class="card  d-flex  align-items-center justify-content-center"><img src="../assest/About-Us/Shirish Meshra.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;"><br>
                     <h3>Shirish Meshram</h3>
                     <h4>Software Developer</h4>
                     <div class="icons-card align-items-center justify-content-center ">
@@ -165,14 +176,14 @@
                         <i class="icon fa-brands fa-github p-3 h3"></i><br>
                         <i class="icon fa-brands fa-instagram p-3 h3"></i>
                       </div></div>
-                    <div class="card  d-flex  align-items-center justify-content-center " style="width: 250px; height: 300px; background-color: rgb(252, 252, 252);border:2px solid rgb(168, 161, 161); border-radius: 20px;"><img src="../assest/About-Us/Anuj Bhaladhare.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;"><br>
+                    <div class="card  d-flex  align-items-center justify-content-center"><img src="../assest/About-Us/Anuj Bhaladhare.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;"><br>
                         <h3>Anuj Bhaladhare</h3>
                         <h4>Software Developer</h4> <div class="icons-card align-items-center justify-content-center ">
                             <i class="icon fa-brands fa-linkedin p-3 h3" style="color: #000000;"></i><br>
                             <i class="icon fa-brands fa-github p-3 h3"></i><br>
                             <i class="icon fa-brands fa-instagram p-3 h3"></i>
                           </div></div>
-                        <div class="card  d-flex  align-items-center justify-content-center " style="width: 250px; height: 300px; background-color: rgb(252, 252, 252);border:2px solid rgb(103, 103, 103); border-radius: 20px;"><img src="../assest/About-Us/Sachi Ramteke.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;"><br>
+                        <div class="card  d-flex  align-items-center justify-content-center " ><img src="../assest/About-Us/Sachi Ramteke.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;"><br>
                             <h2>Sachi Ramteke</h2>
                             <h3>Software Developer</h3> <div class="icons-card align-items-center justify-content-center ">
                                 <i class="icon fa-brands fa-linkedin p-3 h3" style="color: #000000;"></i><br>
@@ -181,28 +192,28 @@
                               </div></div>
         </div>
         <div class="bg-cards d-flex justify-content-around mt-lg-5">
-            <div class="card  d-flex  align-items-center justify-content-center " style="width: 250px; height: 300px;background-color: rgb(252, 252, 252);border:2px solid rgb(255, 141, 100); border-radius: 20px;"><img src="../assest/About-Us/Jeetu Annewar.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;"><br>
+            <div class="card  d-flex  align-items-center justify-content-center "><img src="../assest/About-Us/Jeetu Annewar.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;"><br>
                 <h3>Jeetu Annewar</h3>
                 <h4>Software Developer</h4> <div class="icons-card align-items-center justify-content-center ">
                     <i class="icon fa-brands fa-linkedin p-3 h3" style="color: #000000;"></i><br>
                     <i class="icon fa-brands fa-github p-3 h3"></i><br>
                     <i class="icon fa-brands fa-instagram p-3 h3"></i>
                   </div></div>
-                <div class="card  d-flex  align-items-center justify-content-center " style="width: 250px; height: 300px; background-color: rgb(252, 252, 252);border:2px solid rgb(255, 164, 130); border-radius: 20px;"><img src="/assest/About-images/" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;"><br>
+                <div class="card  d-flex  align-items-center justify-content-center " ><img src="/assest/About-images/" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;"><br>
                     <h3>Shruti paradkar</h3>
                     <h4>dc</h4> <div class="icons-card align-items-center justify-content-center ">
                         <i class="icon fa-brands fa-linkedin p-3 h3" style="color: #000000;"></i><br>
                         <i class="icon fa-brands fa-github p-3 h3"></i><br>
                         <i class="icon fa-brands fa-instagram p-3 h3"></i>
                       </div></div>
-                    <div class="card  d-flex  align-items-center justify-content-center " style="width: 250px; height: 300px; background-color:rgb(252, 252, 252);border:2px solid rgb(168, 161, 161); border-radius: 20px;"><img src="../assest/About-Us/Pawar Akanksha.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;"><br>
+                    <div class="card  d-flex  align-items-center justify-content-center"><img src="../assest/About-Us/Pawar Akanksha.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;"><br>
                         <h3>Pawar Akanksha</h3>
                         <h4>Software Developer</h4> <div class="icons-card align-items-center justify-content-center ">
                             <i class="icon fa-brands fa-linkedin p-3 h3" style="color: #000000;"></i><br>
                             <i class="icon fa-brands fa-github p-3 h3"></i><br>
                             <i class="icon fa-brands fa-instagram p-3 h3"></i>
                           </div></div>
-                        <div class="card  d-flex  align-items-center justify-content-center  " style="width: 250px; height: 300px; background-color: rgb(252, 252, 252);border:2px solid rgb(103, 103, 103); border-radius: 20px;"><img src="../assest/About-Us/Sonali Murkhe.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;">
+                        <div class="card  d-flex  align-items-center justify-content-center "><img src="../assest/About-Us/Sonali Murkhe.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;">
                             <h3>Sonali Murkhe</h3>
                             <h4>Software Developer</h4> <div class="icons-card align-items-center justify-content-center ">
                                 <i class="icon fa-brands fa-linkedin p-3 h3" style="color: #000000;"></i><br>
@@ -211,7 +222,7 @@
                               </div></div>
         </div>
                               <div class="bg-cards d-flex justify-content-center mt-5 mb-5">
-                                <div class="card  d-flex  align-items-center justify-content-center mx-4" style="width: 250px; height: 300px; background-color: rgb(252, 252, 252); border:2px solid rgb(255, 141, 100); border-radius: 20px;"><img src="../assest/About-Us/Abdul Ejaz.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;"><br>
+                                <div class="card  d-flex  align-items-center justify-content-center mx-4"><img src="../assest/About-Us/Abdul Ejaz.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;"><br>
                                     <h3>Abdul Ejaz </h3>
                                     <h4>Software Developer</h4>
                                    <div class="icons-card align-items-center justify-content-center ">
@@ -219,7 +230,7 @@
                                         <i class="icon fa-brands fa-github p-3 h3"></i><br>
                                         <i class="icon fa-brands fa-instagram p-3 h3"></i>
                                       </div></div>
-                                    <div class="card  d-flex  align-items-center justify-content-center mx-4" style="width: 250px; height: 300px; background-color: rgb(252, 252, 252); border-radius: 20px; border:2px solid rgb(255, 164, 130);"><img src="../assest/About-Us/Kashish Dadghaye.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;">
+                                    <div class="card  d-flex  align-items-center justify-content-center mx-4"><img src="../assest/About-Us/Kashish Dadghaye.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;">
                                         <h3>Kashish Dadghaye</h3>
                                         <h4>Software Developer</h4> <div class="icons-card align-items-center justify-content-center ">
                                             <i class="icon fa-brands fa-linkedin p-3 h3" style="color: #000000;"></i><br>
