--- a/Pages/About.html
+++ b/Pages/About.html
@@ -11,7 +11,7 @@
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
         <link rel="stylesheet" href="../css/index.css">
 
-    <title>Document</title>
+    <title>Aboout</title>
     <style>
         *{
             padding: 0;
