--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -51,7 +51,7 @@
                         <a class="nav-link fw-bold" href="./contact.html">Contact</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link fw-bold" href="#">About Us</a>
+                        <a class="nav-link fw-bold" href="./About.html">About Us</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link fw-bold" href="./dashBoard.html">Dashboard</a>
