add anchor tag in all pages

--- a/Pages/dashBoard.html
+++ b/Pages/dashBoard.html
@@ -42,7 +42,7 @@
                     <a class="nav-link fw-bold" href="./contact.html">Contact</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link fw-bold" href="#">AboutUs</a>
+                    <a class="nav-link fw-bold" href="./About.html">AboutUs</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link fw-bold" href="./dashBoard.html">Dashboard</a>
