Modified Some content of About Page

--- a/Pages/About.html
+++ b/Pages/About.html
@@ -118,7 +118,7 @@
             <img src="./assest/new-index-image/dark-moon.png" class="img-fluid dark-light-btn mt-2" alt="">
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./Pages/login-page.html">
+            <a class="nav-link" href="../Pages/login-page.html">
                 <button
                   class="btn nav-button-1 fw-bold text-light"
                   style="background-color: #7b4bff; border-color: #812dff">Login 
@@ -126,7 +126,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./Pages/sign-up.html">
+            <a class="nav-link" href="../Pages/sign-up.html">
                 <button
                   class="btn nav-button-2 fw-bold text-light"
                   style="background-color: #ff4b66; border-color: #ff4e69"
