--- a/Pages/video-player.html
+++ b/Pages/video-player.html
@@ -77,5 +77,6 @@
     </div>
     <script src="https://kit.fontawesome.com/c33a357a73.js" crossorigin="anonymous"></script>
     <script src="../JavaScript/video-player.js"></script>
+    <script src="./../JavaScript/comman.js"></script>
 </body>
 </html>
