--- a/index.html
+++ b/index.html
@@ -54,30 +54,8 @@
           </ul>
         </div>
         
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li>
-              <img src="./assest/new-index-image/dark-moon.png" class="img-fluid dark-light-btn mt-2" alt="">
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./Pages/login-page.html">
-                  <button
-                    class="btn nav-button-1 fw-bold text-light"
-                    style="background-color: #7b4bff; border-color: #812dff">Login 
-                  </button>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./Pages/sign-up.html">
-                  <button
-                    class="btn nav-button-2 fw-bold text-light"
-                    style="background-color: #ff4b66; border-color: #ff4e69"
-                  >
-                  SignUp
-                  </button>
-              </a>
-            </li>
-          </ul>
+        <div class="collapse navbar-collapse navbar-nav-container" id="navbarNav">
+
         </div>
         
       </div>
@@ -624,6 +602,7 @@
     </footer>
 
     <script src="./JavaScript/index.js"></script>
+    <script src="./JavaScript/comman.js"></script>
     <script
       src="https://kit.fontawesome.com/c33a357a73.js"
       crossorigin="anonymous"
