--- a/Pages/courses.html
+++ b/Pages/courses.html
@@ -53,27 +53,8 @@
             </ul>
           </div>
           
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="./login-page.html">
-                    <button
-                      class="btn nav-button-1 fw-bold text-light"
-                      style="background-color: #7b4bff; border-color: #812dff">Login 
-                    </button>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./sign-up.html">
-                    <button
-                      class="btn nav-button-2 fw-bold text-light"
-                      style="background-color: #ff4b66; border-color: #ff4e69"
-                    >
-                    SignUp
-                    </button>
-                </a>
-              </li>
-            </ul>
+          <div class="collapse navbar-collapse navbar-nav-container" id="navbarNav">
+
           </div>
           
         </div>
@@ -166,5 +147,10 @@
     </div>
 
     <script src="../JavaScript/courses.js"></script>
+    <script src="./../JavaScript/comman.js"></script>
+    <script
+    src="https://kit.fontawesome.com/c33a357a73.js"
+    crossorigin="anonymous"
+  ></script>
   </body>
 </html>
