--- a/Pages/dashBoard.html
+++ b/Pages/dashBoard.html
@@ -50,27 +50,8 @@
                 </ul>
               </div>
               
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link" href="./login-page.html">
-                        <button
-                          class="btn nav-button-1 fw-bold text-light"
-                          style="background-color: #7b4bff; border-color: #812dff">Login 
-                        </button>
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./sign-up.html">
-                        <button
-                          class="btn nav-button-2 fw-bold text-light"
-                          style="background-color: #ff4b66; border-color: #ff4e69"
-                        >
-                        SignUp
-                        </button>
-                    </a>
-                  </li>
-                </ul>
+              <div class="collapse navbar-collapse navbar-nav-container" id="navbarNav">
+
               </div>
               
             </div>
@@ -163,6 +144,11 @@
     </div>
 
     <script src="../JavaScript/dasbBoard.js"></script>
+    <script src="./../JavaScript/comman.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <script
+    src="https://kit.fontawesome.com/c33a357a73.js"
+    crossorigin="anonymous"
+  ></script>
   </body>
 </html>
