--- a/Pages/login-page.html
+++ b/Pages/login-page.html
@@ -78,28 +78,8 @@
               </li>
             </ul>
           </div>
-          
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="./login-page.html">
-                    <button
-                      class="btn nav-button-1 fw-bold text-light"
-                      style="background-color: #7b4bff; border-color: #812dff">Login 
-                    </button>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./sign-up.html">
-                    <button
-                      class="btn nav-button-2 fw-bold text-light"
-                      style="background-color: #ff4b66; border-color: #ff4e69"
-                    >
-                    SignUp
-                    </button>
-                </a>
-              </li>
-            </ul>
+          <div class="collapse navbar-collapse navbar-nav-container" id="navbarNav">
+
           </div>
           
         </div>
@@ -125,10 +105,20 @@
                 <p class="text-black fs-5 text-center">We are happy to have you login </p>
       </div>
       <div class="input-group mb-3">
-    <input type="text" class="form-control form-control-lg bg-light fs-6"placeholder="Email address">
+    <input 
+      id="username"
+      type="text" 
+      class="form-control form-control-lg bg-light fs-6"
+      placeholder="Email address"
+    >
     </div>
       <div class="input-group mb-1">
-        <input type="password" class="form-control form-control-lg bg-light fs-6"placeholder="Password">
+        <input 
+          id="password"
+          type="password" 
+          class="form-control form-control-lg bg-light fs-6"
+          placeholder="Password"
+        >
     </div>
     <div class="input-group mb-5 d-flex justify-content-between" >
         <div class="form-check p-3">
@@ -140,7 +130,7 @@
      </div>
     </div>
     <div class="input-group mb-3">
-        <button class="btn btn-lg btn-primary w-100 fs-6 button-62">Login</button>
+        <button onclick="userLogin()" class="btn btn-lg btn-primary w-100 fs-6 button-62">Login</button>
     </div>
     <div class="input-group mb-3">
         <button class="btn btn-lg btn-light w-100 fs-6 sign-in"><img src="/assest/index-images/login-img/search.png"style="width:30px" class="me-2 rounded-circle"><small>Sign in with Google</small></button>
@@ -227,5 +217,11 @@
     </div>
   </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <script src="./../JavaScript/login.js"></script>
+    <script src="./../JavaScript/comman.js"></script>
+    <script
+    src="https://kit.fontawesome.com/c33a357a73.js"
+    crossorigin="anonymous"
+  ></script>
   </body>
 </html>
