--- a/Pages/sign-up.html
+++ b/Pages/sign-up.html
@@ -79,28 +79,8 @@
               </li>
             </ul>
           </div>
-          
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="./login-page.html">
-                    <button
-                      class="btn nav-button-1 fw-bold text-light"
-                      style="background-color: #7b4bff; border-color: #812dff">Login 
-                    </button>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./sign-up.html">
-                    <button
-                      class="btn nav-button-2 fw-bold text-light"
-                      style="background-color: #ff4b66; border-color: #ff4e69"
-                    >
-                    SignUp
-                    </button>
-                </a>
-              </li>
-            </ul>
+          <div class="collapse navbar-collapse navbar-nav-container" id="navbarNav">
+
           </div>
           
         </div>
@@ -155,6 +135,7 @@
             </div>
             <div class="input-group mb-3">
               <input
+                id="fullName"
                 type="text"
                 class="form-control form-control-lg bg-light fs-6"
                 placeholder="Enter Your Name"
@@ -162,6 +143,7 @@
             </div>
             <div class="input-group mb-3">
               <input
+                id="username"
                 type="text"
                 class="form-control form-control-lg bg-light fs-6"
                 placeholder="Email address"
@@ -169,6 +151,7 @@
             </div>
             <div class="input-group mb-1">
               <input
+                id="password"
                 type="password"
                 class="form-control form-control-lg bg-light fs-6"
                 placeholder="Password"
@@ -192,7 +175,7 @@
               </div>
             </div>
             <div class="input-group mb-3">
-              <button class="btn btn-lg btn-primary w-100 fs-5 button-62">
+              <button onclick="handalCreateUser()" class="btn btn-lg btn-primary w-100 fs-5 button-62">
                 Sign Up
               </button>
             </div>
@@ -294,5 +277,11 @@
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
       crossorigin="anonymous"
     ></script>
+    <script src="./../JavaScript/singup.js"></script>
+    <script src="./../JavaScript/comman.js"></script>
+    <script
+    src="https://kit.fontawesome.com/c33a357a73.js"
+    crossorigin="anonymous"
+  ></script>
   </body>
 </html>
